--- a/multipass-k8s-cluster/config/debian-cloud-init.yaml
+++ b/multipass-k8s-cluster/config/debian-cloud-init.yaml
@@ -13,13 +13,21 @@ runcmd:
   - mount --bind /dev /mnt/dev
   - mount --bind /proc /mnt/proc
   - mount --bind /sys /mnt/sys
-  - chroot /mnt /bin/bash -c "apt-get update && apt-get install -y linux-image-arm64 systemd-sysv"
+  - |
+    chroot /mnt /bin/bash -c "apt-get update && \
+    apt-get install -y linux-image-arm64 systemd-sysv"
   - chroot /mnt /bin/bash -c "apt-get install -y grub-efi"
-  - chroot /mnt /bin/bash -c "grub-install --target=arm64-efi --efi-directory=/boot/efi --bootloader-debian --recheck"
+  - |
+    chroot /mnt /bin/bash -c "grub-install --target=arm64-efi \
+    --efi-directory=/boot/efi --bootloader-debian --recheck"
   - chroot /mnt /bin/bash -c "update-grub"
-  - chroot /mnt /bin/bash -c "echo 'deb http://deb.debian.org/debian/ bookworm main' > /etc/apt/sources.list"
+  - |
+    chroot /mnt /bin/bash -c "echo 'deb http://deb.debian.org/debian/ \
+    bookworm main' > /etc/apt/sources.list"
   - chroot /mnt /bin/bash -c "echo 'root:password' | chpasswd"
-  - chroot /mnt /bin/bash -c "sed -i 's/^#PermitRootLogin.*/PermitRootLogin yes/' /etc/ssh/sshd_config"
+  - |
+    chroot /mnt /bin/bash -c "sed -i 's/^#PermitRootLogin.*/\
+    PermitRootLogin yes/' /etc/ssh/sshd_config"
   - chroot /mnt /bin/bash -c "systemctl enable ssh"
   - umount /mnt/dev
   - umount /mnt/proc
