refactor scripts and add new code

--- a/k8s-installation/k8s-hard-vagrant-bash/config/systemd-units/etcd.service
+++ b/k8s-installation/k8s-hard-vagrant-bash/config/systemd-units/etcd.service
@@ -1,19 +1,25 @@
 [Unit]
 Description=etcd
-Documentation=https://github.com/etcd-io/etcd
+Documentation=https://github.com/coreos
 
 [Service]
-Type=notify
-Environment="ETCD_UNSUPPORTED_ARCH=arm64"
-ExecStart=/usr/local/bin/etcd \
-  --name controller \
-  --initial-advertise-peer-urls http://127.0.0.1:2380 \
-  --listen-peer-urls http://127.0.0.1:2380 \
-  --listen-client-urls http://127.0.0.1:2379 \
-  --advertise-client-urls http://127.0.0.1:2379 \
-  --initial-cluster-token etcd-cluster-0 \
-  --initial-cluster controller=http://127.0.0.1:2380 \
-  --initial-cluster-state new \
+ExecStart=/usr/local/bin/etcd \\
+  --name ${ETCD_NAME} \\
+  --cert-file=/etc/etcd/etcd-server.crt \\
+  --key-file=/etc/etcd/etcd-server.key \\
+  --peer-cert-file=/etc/etcd/etcd-server.crt \\
+  --peer-key-file=/etc/etcd/etcd-server.key \\
+  --trusted-ca-file=/etc/etcd/ca.crt \\
+  --peer-trusted-ca-file=/etc/etcd/ca.crt \\
+  --peer-client-cert-auth \\
+  --client-cert-auth \\
+  --initial-advertise-peer-urls https://${INTERNAL_IP}:2380 \\
+  --listen-peer-urls https://${INTERNAL_IP}:2380 \\
+  --listen-client-urls https://${INTERNAL_IP}:2379,https://127.0.0.1:2379 \\
+  --advertise-client-urls https://${INTERNAL_IP}:2379 \\
+  --initial-cluster-token etcd-cluster-0 \\
+  --initial-cluster master01=https://192.168.56.11:2380,master02=https://192.168.56.12:2380 \\
+  --initial-cluster-state new \\
   --data-dir=/var/lib/etcd
 Restart=on-failure
 RestartSec=5
