--- a/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
+++ b/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
@@ -44,15 +44,19 @@ Vagrant.configure("2") do |config|
 
   # Provision Jumpbox Node
   config.vm.define "jumpbox" do |node|
+    node.vm.synced_folder ".", "~/"
+  
     node.vm.provider "virtualbox" do |vb|
       vb.name = "jumpbox"
       vb.memory = LB_RAM
       vb.cpus = LB_CPU
     end
+  
     node.vm.hostname = "jumpbox"
     node.vm.network :private_network, ip: IP_NW + "#{JUMP_IP_START}"
     node.vm.network "forwarded_port", guest: 22, host: 2731
   end
+  
 
   # Provision Master Nodes
   (1..NUM_MASTER_NODES).each do |i|
