--- a/k8s-installation/k8s-hard-vagrant-bash/config/certs/ca.conf
+++ b/k8s-installation/k8s-hard-vagrant-bash/config/certs/ca.conf
@@ -14,3 +14,14 @@ subjectKeyIdentifier = hash
 authorityKeyIdentifier = keyid:always,issuer
 basicConstraints = critical, CA:true
 keyUsage = critical, digitalSignature, keyCertSign, cRLSign
+
+[alt_names]
+DNS.1 = kubernetes
+DNS.2 = kubernetes.default
+DNS.3 = kubernetes.default.svc
+DNS.4 = kubernetes.default.svc.cluster.local
+IP.1 = 10.96.0.1
+IP.2 = 192.168.56.11
+IP.3 = 192.168.56.12
+IP.4 = 192.168.56.30
+IP.5 = 127.0.0.1
