--- a/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
+++ b/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
@@ -77,6 +77,7 @@ Vagrant.configure("2") do |config|
       node.vm.hostname = "master0#{i}"
       node.vm.network :private_network, ip: IP_NW + "#{MASTER_IP_START + i}"
       node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
+      jumpbox.vm.provision "shell", path: "09-scripts/setup-controllers.sh", privileged: true, run: "never"
     end
   end
 
@@ -91,6 +92,7 @@ Vagrant.configure("2") do |config|
       node.vm.hostname = "worker0#{i}"
       node.vm.network :private_network, ip: IP_NW + "#{NODE_IP_START + i}"
       node.vm.network "forwarded_port", guest: 22, host: "#{2720 + i}"
+      jumpbox.vm.provision "shell", path: "10-scripts/setup-workers.sh", privileged: true, run: "never"
     end
   end
 
@@ -104,6 +106,7 @@ Vagrant.configure("2") do |config|
     node.vm.hostname = "loadbalancer"
     node.vm.network :private_network, ip: IP_NW + "#{LB_IP_START}"
     node.vm.network "forwarded_port", guest: 22, host: 2732
+    jumpbox.vm.provision "shell", path: "11-scripts/setup-loadbalancer.sh", privileged: true, run: "never"
   end
 
   # Provision Other Machines Only After Jumpbox Completes
