--- a/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
+++ b/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
@@ -21,7 +21,7 @@ RESOURCES = {
 
 # Define the number of master and worker nodes
 NUM_MASTER_NODES = 2
-NUM_WORKER_NODE = 2
+NUM_WORKER_NODES = 2
 LB_RAM = 512  # Load balancer gets 512MB of RAM
 LB_CPU = 1    # Load balancer gets 1 CPU
 
@@ -44,7 +44,7 @@ Vagrant.configure("2") do |config|
 
   # Provision Jumpbox Node
   config.vm.define "jumpbox" do |node|
-    node.vm.synced_folder ".", "~/"
+    node.vm.synced_folder ".", "/home/vagrant"
   
     node.vm.provider "virtualbox" do |vb|
       vb.name = "jumpbox"
@@ -55,14 +55,14 @@ Vagrant.configure("2") do |config|
     node.vm.hostname = "jumpbox"
     node.vm.network :private_network, ip: IP_NW + "#{JUMP_IP_START}"
     node.vm.network "forwarded_port", guest: 22, host: 2731
-    jumpbox.vm.provision "shell", path: "01-scripts/setup-vms.sh", privileged: true, run: "never"
-    jumpbox.vm.provision "shell", path: "02-scripts/setup-hosts.sh", privileged: true, run: "never"
-    jumpbox.vm.provision "shell", path: "03-scripts/setup-jumpbox.sh", privileged: true, run: "never"
-    jumpbox.vm.provision "shell", path: "04-scripts/dowload-binaries.sh", privileged: true, run: "never"
-    jumpbox.vm.provision "shell", path: "05-scripts/generate-certs.sh", privileged: true, run: "never"
-    jumpbox.vm.provision "shell", path: "06-scripts/generate-kube-configs.sh", privileged: true, run: "never"
-    jumpbox.vm.provision "shell", path: "07-scripts/generate-data-encryptions.sh", privileged: true, run: "never"
-    jumpbox.vm.provision "shell", path: "08-scripts/distribute-files-and-configs.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/01-setup-vms.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/02-setup-hosts.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/03-setup-jumpbox.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/04-download-binaries.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/05-generate-certs.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/06-generate-kube-configs.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/07-generate-data-encryption.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/08-distribute-files-and-configs.sh", privileged: true, run: "never"
   end
   
 
@@ -77,12 +77,12 @@ Vagrant.configure("2") do |config|
       node.vm.hostname = "master0#{i}"
       node.vm.network :private_network, ip: IP_NW + "#{MASTER_IP_START + i}"
       node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
-      jumpbox.vm.provision "shell", path: "09-scripts/setup-controllers.sh", privileged: true, run: "never"
+      node.vm.provision "shell", path: "scripts/09-setup-controllers.sh", privileged: true, run: "never"
     end
   end
 
   # Provision Worker Nodes
-  (1..NUM_WORKER_NODE).each do |i|
+  (1..NUM_WORKER_NODES).each do |i|
     config.vm.define "worker0#{i}" do |node|
       node.vm.provider "virtualbox" do |vb|
         vb.name = "worker0#{i}"
@@ -92,7 +92,8 @@ Vagrant.configure("2") do |config|
       node.vm.hostname = "worker0#{i}"
       node.vm.network :private_network, ip: IP_NW + "#{NODE_IP_START + i}"
       node.vm.network "forwarded_port", guest: 22, host: "#{2720 + i}"
-      jumpbox.vm.provision "shell", path: "10-scripts/setup-workers.sh", privileged: true, run: "never"
+      node.vm.provision "shell", path: "scripts/01-setup-vms.sh", privileged: true, run: "never"
+      node.vm.provision "shell", path: "scripts/10-setup-workers.sh", privileged: true, run: "never"
     end
   end
 
@@ -106,16 +107,19 @@ Vagrant.configure("2") do |config|
     node.vm.hostname = "loadbalancer"
     node.vm.network :private_network, ip: IP_NW + "#{LB_IP_START}"
     node.vm.network "forwarded_port", guest: 22, host: 2732
-    jumpbox.vm.provision "shell", path: "11-scripts/setup-loadbalancer.sh", privileged: true, run: "never"
+    node.vm.provision "shell", path: "scripts/11-setup-loadbalancer.sh", privileged: true, run: "never"
   end
 
   # Provision Other Machines Only After Jumpbox Completes
-  config.trigger.after :provision, target: "jumpbox" do
-    run "vagrant provision master01 master02 worker01 worker02 loadbalancer"
+  config.trigger.after :provision do |trigger|
+    trigger.name = "provision-other-machines"
+    trigger.run = { inline: "vagrant provision master01 master02 worker01 worker02 loadbalancer" }
   end
 
   # Install calico, coredns, and test the cluster
-  config.trigger.after :provision, target: ["master01", "master02", "worker01", "worker02", "loadbalancer"] do
-    run "vagrant ssh jumpbox -c 'bash /vagrant/scripts/12-setup-cluster-networking-and-permissions.sh'"
-  end  
+  config.trigger.after :provision do |trigger|
+    trigger.name = "setup-cluster-networking"
+    trigger.run = { inline: "vagrant ssh jumpbox -c 'bash /vagrant/scripts/12-setup-cluster-networking-and-permissions.sh'" }
+  end
 end
+
