--- a/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
+++ b/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
@@ -45,6 +45,7 @@ Vagrant.configure("2") do |config|
     # Initial jumpbox setup scripts that run immediately
     node.vm.provision "initial-setup", type: "shell", path: "scripts/01-setup-vms.sh"
     node.vm.provision "setup-hosts", type: "shell", path: "scripts/02-setup-hosts.sh"
+    node.vm.provision "generate-ssh", type: "shell", path: "scripts/03-generate-ssh.sh"
     # node.vm.provision "setup-jumpbox", type: "shell", path: "scripts/03-setup-jumpbox.sh"
     node.vm.provision "download-binaries", type: "shell", path: "scripts/04-download-binaries.sh"
     node.vm.provision "generate-certs", type: "shell", path: "scripts/05-generate-certs.sh"
@@ -52,8 +53,8 @@ Vagrant.configure("2") do |config|
     node.vm.provision "generate-encryption", type: "shell", path: "scripts/07-generate-data-encryption.sh"
     
     # This script will be triggered after all machines are up
-    node.vm.provision "distribute-files", type: "shell", path: "scripts/08-distribute-files-and-configs.sh", run: "never"
-    node.vm.provision "setup-networking", type: "shell", path: "scripts/12-setup-cluster-networking-and-permissions.sh", run: "never"
+    node.vm.provision "distribute-files", type: "shell", path: "scripts/09-distribute-files-and-configs.sh", run: "never"
+    node.vm.provision "setup-networking", type: "shell", path: "scripts/13-setup-cluster-networking-and-permissions.sh", run: "never"
   end
 
   # Master nodes - created but not provisioned initially
@@ -69,7 +70,8 @@ Vagrant.configure("2") do |config|
       node.vm.network "forwarded_port", guest: 22, host: "#{2710 + i}"
       node.vm.provision "initial-setup", type: "shell", path: "scripts/01-setup-vms.sh"
       node.vm.provision "setup-hosts", type: "shell", path: "scripts/02-setup-hosts.sh"
-      node.vm.provision "setup-controller", type: "shell", path: "scripts/09-setup-controllers.sh", run: "never"
+      node.vm.provision "setup-ssh", type: "shell", path: "scripts/08-setup-ssh.sh"
+      node.vm.provision "setup-controller", type: "shell", path: "scripts/10-setup-controllers.sh", run: "never"
     end
   end
 
@@ -86,7 +88,8 @@ Vagrant.configure("2") do |config|
       node.vm.network "forwarded_port", guest: 22, host: "#{2720 + i}"
       node.vm.provision "initial-setup", type: "shell", path: "scripts/01-setup-vms.sh"
       node.vm.provision "setup-hosts", type: "shell", path: "scripts/02-setup-hosts.sh"
-      node.vm.provision "setup-worker", type: "shell", path: "scripts/10-setup-workers.sh", run: "never"
+      node.vm.provision "setup-ssh", type: "shell", path: "scripts/08-setup-ssh.sh"
+      node.vm.provision "setup-worker", type: "shell", path: "scripts/11-setup-workers.sh", run: "never"
     end
   end
 
@@ -102,7 +105,8 @@ Vagrant.configure("2") do |config|
     node.vm.network "forwarded_port", guest: 22, host: 2732
     node.vm.provision "initial-setup", type: "shell", path: "scripts/01-setup-vms.sh"
     node.vm.provision "setup-hosts", type: "shell", path: "scripts/02-setup-hosts.sh"
-    node.vm.provision "setup-lb", type: "shell", path: "scripts/11-setup-loadbalancer.sh", run: "never"
+    node.vm.provision "setup-ssh", type: "shell", path: "scripts/08-setup-ssh.sh"
+    node.vm.provision "setup-lb", type: "shell", path: "scripts/12-setup-loadbalancer.sh", run: "never"
   end
 
   # Single trigger to handle the entire sequence
@@ -110,7 +114,7 @@ Vagrant.configure("2") do |config|
     trigger.name = "start-provisioning-sequence"
     trigger.only_on = "loadbalancer"
     trigger.run = {
-      path: "scripts/13-provision.sh"
+      path: "scripts/14-provision.sh"
     }
   end  
 end
