--- a/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
+++ b/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
@@ -27,12 +27,12 @@ JUMP_IP_START = 40
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/jammy64"
   config.vm.boot_timeout = 900
-  config.vm.synced_folder "/media/davidshare/Tersu", "/vagrant_data"
+  config.vm.synced_folder "/media/davidshare/Tersu/vagrant_data", "/vagrant_data"
   config.vm.box_check_update = false
 
   # Define jumpbox first - it will be created and provisioned immediately
   config.vm.define "jumpbox", primary: true do |node|
-    node.vm.synced_folder ".", "/home/vagrant"
+    node.vm.synced_folder ".", "/home/vagrant/project"
     node.vm.provider "virtualbox" do |vb|
       vb.name = "jumpbox"
       vb.memory = LB_RAM
@@ -60,6 +60,7 @@ Vagrant.configure("2") do |config|
   # Master nodes - created but not provisioned initially
   (1..NUM_MASTER_NODES).each do |i|
     config.vm.define "master0#{i}" do |node|
+      node.vm.synced_folder "scripts", "/home/vagrant/project/scripts"
       node.vm.provider "virtualbox" do |vb|
         vb.name = "master0#{i}"
         vb.memory = RESOURCES["master"]["ram"]
@@ -78,6 +79,7 @@ Vagrant.configure("2") do |config|
   # Worker nodes - created but not provisioned initially
   (1..NUM_WORKER_NODES).each do |i|
     config.vm.define "worker0#{i}" do |node|
+      node.vm.synced_folder "scripts", "/home/vagrant/project/scripts"
       node.vm.provider "virtualbox" do |vb|
         vb.name = "worker0#{i}"
         vb.memory = RESOURCES["worker"]["ram"]
@@ -95,6 +97,7 @@ Vagrant.configure("2") do |config|
 
   # Load balancer - created but not provisioned initially
   config.vm.define "loadbalancer" do |node|
+    node.vm.synced_folder "scripts", "/home/vagrant/project/scripts"
     node.vm.provider "virtualbox" do |vb|
       vb.name = "loadbalancer"
       vb.memory = LB_RAM
