--- a/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
+++ b/k8s-installation/k8s-hard-vagrant-bash/Vagrantfile
@@ -54,7 +54,8 @@ Vagrant.configure("2") do |config|
     
     # This script will be triggered after all machines are up
     node.vm.provision "distribute-files", type: "shell", path: "scripts/09-distribute-files-and-configs.sh", run: "never"
-    node.vm.provision "setup-networking", type: "shell", path: "scripts/13-setup-cluster-networking-and-permissions.sh", run: "never"
+    node.vm.provision "start-etcd-cluster", type: "shell", path: "scripts/11-start-etcd-cluster.sh", run: "never"
+    node.vm.provision "setup-networking", type: "shell", path: "scripts/14-setup-cluster-networking-and-permissions.sh", run: "never"
   end
 
   # Master nodes - created but not provisioned initially
@@ -91,7 +92,7 @@ Vagrant.configure("2") do |config|
       node.vm.provision "initial-setup", type: "shell", path: "scripts/01-setup-vms.sh"
       node.vm.provision "setup-hosts", type: "shell", path: "scripts/02-setup-hosts.sh"
       node.vm.provision "setup-ssh", type: "shell", path: "scripts/08-setup-ssh.sh"
-      node.vm.provision "setup-worker", type: "shell", path: "scripts/11-setup-workers.sh", run: "never"
+      node.vm.provision "setup-worker", type: "shell", path: "scripts/12-setup-workers.sh", run: "never"
     end
   end
 
@@ -109,7 +110,7 @@ Vagrant.configure("2") do |config|
     node.vm.provision "initial-setup", type: "shell", path: "scripts/01-setup-vms.sh"
     node.vm.provision "setup-hosts", type: "shell", path: "scripts/02-setup-hosts.sh"
     node.vm.provision "setup-ssh", type: "shell", path: "scripts/08-setup-ssh.sh"
-    node.vm.provision "setup-lb", type: "shell", path: "scripts/12-setup-loadbalancer.sh", run: "never"
+    node.vm.provision "setup-lb", type: "shell", path: "scripts/13-setup-loadbalancer.sh", run: "never"
   end
 
   # Single trigger to handle the entire sequence
@@ -117,7 +118,7 @@ Vagrant.configure("2") do |config|
     trigger.name = "start-provisioning-sequence"
     trigger.only_on = "loadbalancer"
     trigger.run = {
-      path: "scripts/14-provision.sh"
+      path: "scripts/15-provision.sh"
     }
   end  
 end
