--- a/k8s-installation/k8s-cluster-vagrant-ansible/ansible/ansible.cfg
+++ b/k8s-installation/k8s-cluster-vagrant-ansible/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
-inventory = inventory/hosts
-remote_user = root
+inventory = inventory/hosts.ini
+remote_user = ubuntu
 private_key_file = ~/.ssh/id_rsa
 host_key_checking = False
 retry_files_enabled = False
