--- a/k8s-installation/k8s-cluster-vagrant-ansible/ansible/group_vars/all.yml
+++ b/k8s-installation/k8s-cluster-vagrant-ansible/ansible/group_vars/all.yml
@@ -1,41 +1,36 @@
----
-# Latest Kubernetes version (as of 2024)
-kubernetes_version: "1.34.0"
-etcd_version: "3.6.4"
-cni_version: "1.4.1"
-crictl_version: "1.34.0"
+# Global paths
+base_dir: /etc/kubernetes
+pki_dir: "{{ base_dir }}/pki"
+manifests_dir: "{{ base_dir }}/manifests"
+config_dir: "{{ base_dir }}/configs"
 
-# Network configuration (aligned with your Vagrant setup)
-cluster_cidr: "10.200.0.0/16"
-service_cidr: "10.32.0.0/24"
-cluster_dns: "10.32.0.10"
-cluster_domain: "cluster.local"
+# Binary paths (source from synced ansible/roles/*/files/)
+cfssl_binary: /vagrant_data/ansible/roles/certificates/files/cfssl
+cfssljson_binary: /vagrant_data/ansible/roles/certificates/files/cfssljson
+etcd_binary: /vagrant_data/ansible/roles/etcd/files/etcd
+etcdctl_binary: /vagrant_data/ansible/roles/etcd/files/etcdctl
+kube_apiserver_binary: /vagrant_data/ansible/roles/control-plane/files/kube-apiserver
+kube_controller_manager_binary: /vagrant_data/ansible/roles/control-plane/files/kube-controller-manager
+kube_scheduler_binary: /vagrant_data/ansible/roles/control-plane/files/kube-scheduler
+kubelet_binary: /vagrant_data/ansible/roles/kubelet/files/kubelet
+kube_proxy_binary: /vagrant_data/ansible/roles/kube-proxy/files/kube-proxy
+runc_binary: /vagrant_data/ansible/roles/container-runtime/files/runc
+containerd_binary: /vagrant_data/ansible/roles/container-runtime/files/containerd
+kubectl_binary: /vagrant_data/ansible/roles/networking/files/kubectl
+flannel_manifest: /vagrant_data/ansible/roles/cni/files/kube-flannel.yml
 
-# Certificate authorities
-ca_cert_path: "/etc/kubernetes/pki/ca.crt"
-ca_key_path: "/etc/kubernetes/pki/ca.key"
+# Kubernetes versions and settings
+kubernetes_version: 1.34.1
+etcd_version: 3.6.0
+containerd_version: 2.0.0
+cfssl_version: 1.6.5
 
-# Directories
-kubernetes_dir: "/etc/kubernetes"
-kubernetes_bin_dir: "/usr/local/bin"
-kubernetes_config_dir: "/etc/kubernetes/config"
-kubernetes_ssl_dir: "/etc/kubernetes/ssl"
-kubernetes_pki_dir: "/etc/kubernetes/pki"
+# Network settings
+pod_network_cidr: 10.244.0.0/16
+service_cidr: 10.96.0.0/12
+api_server_port: 6443
+cluster_name: kubernetes
 
-# Container runtime (containerd) - latest version
-containerd_version: "2.14"
-
-# Network interface (aligned with Vagrant private network)
-cluster_interface: "enp0s8"
-
-# Load balancer configuration
-load_balancer_ip: "192.168.56.30"
-load_balancer_port: "6443"
-
-# Resource constraints based on your Vagrant setup
-master_memory_mb: 3072 # 3GB
-master_cpus: 2
-worker_memory_mb: 2048 # 2GB
-worker_cpus: 1
-lb_memory_mb: 512
-lb_cpus: 1
+# System settings
+swap_enabled: false
+ntp_package: chrony
