--- a/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/etcd.yml
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/group_vars/etcd.yml
@@ -1,16 +1,16 @@
-# etcd settings
+# etcd settings for single-node cluster
 etcd_data_dir: /var/lib/etcd
 etcd_args:
   - --name={{ inventory_hostname }}
   - --data-dir={{ etcd_data_dir }}
   - --client-cert-auth=true
-  - --cert-file={{ pki_dir }}/etcd.crt
-  - --key-file={{ pki_dir }}/etcd.key
-  - --trusted-ca-file={{ pki_dir }}/ca.crt
-  - --peer-cert-file={{ pki_dir }}/etcd-peer.crt
-  - --peer-key-file={{ pki_dir }}/etcd-peer.key
-  - --peer-trusted-ca-file={{ pki_dir }}/ca.crt
-  - --initial-cluster=master1=https://192.168.56.11:2380,master2=https://192.168.56.12:2380,master3=https://192.168.56.13:2380
+  - --cert-file={{ pki_dir }}/etcd.pem
+  - --key-file={{ pki_dir }}/etcd-key.pem
+  - --trusted-ca-file={{ pki_dir }}/ca.pem
+  - --peer-cert-file={{ pki_dir }}/etcd.pem
+  - --peer-key-file={{ pki_dir }}/etcd-key.pem
+  - --peer-trusted-ca-file={{ pki_dir }}/ca.pem
+  - --initial-cluster=master1=https://192.168.56.11:2380
   - --initial-cluster-state=new
   - --listen-client-urls=https://0.0.0.0:2379
   - --advertise-client-urls=https://{{ ansible_host }}:2379
