--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/tasks/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/tasks/main.yml
@@ -1,2 +1,5 @@
 - name: Configure bootstrap
   include_tasks: configure_bootstrap.yml
+
+- name: Generate kubeconfig files
+  include_tasks: generate_kubeconfigs.yml
