--- a/k8s-installation/vagrant-ansible/ansible/inventory/hosts.ini
+++ b/k8s-installation/vagrant-ansible/ansible/inventory/hosts.ini
@@ -1,17 +1,15 @@
 [masters]
-master1 ansible_host=192.168.56.11
+{% for master in network.masters %}
+{{ master.name }} ansible_host={{ master.ip }} ansible_user=ubuntu
+{% endfor %}
 
 [workers]
-worker1 ansible_host=192.168.56.21
-worker2 ansible_host=192.168.56.22
-
-[etcd]
-master1 ansible_host=192.168.56.11
+{% for worker in network.workers %}
+{{ worker.name }} ansible_host={{ worker.ip }} ansible_user=ubuntu
+{% endfor %}
 
 [jumpbox]
-jumpbox ansible_host=192.168.56.40
+{{ network.jumpbox.name }} ansible_host={{ network.jumpbox.ip }} ansible_user=ubuntu
 
 [all:vars]
-ansible_user=ubuntu
-ansible_ssh_private_key_file=/home/ubuntu/.ssh/id_rsa
 ansible_ssh_common_args='-o StrictHostKeyChecking=no'
