--- a/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/bootstrap/meta/main.yml
@@ -1,3 +1,4 @@
 dependencies:
+  - {role: jumpbox_setup, tags: ["jumpbox_setup"]}
   - {role: common, tags: ["common"]}
   - {role: control-plane, tags: ["control-plane"]}
