--- a/k8s-installation/vagrant-ansible/ansible/roles/control-plane/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/control-plane/meta/main.yml
@@ -1,4 +1,5 @@
 dependencies:
   - {role: common, tags: ["common"]}
+  - {role: jumpbox_setup, tags: ["jumpbox_setup"]}
   - {role: certificates, tags: ["certificates"]}
   - {role: etcd, tags: ["etcd"]}
