--- a/k8s-installation/vagrant-ansible/ansible/roles/etcd/meta/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/etcd/meta/main.yml
@@ -1,3 +1,4 @@
 dependencies:
   - {role: common, tags: ["common"]}
+  - {role: jumpbox_setup, tags: ["jumpbox_setup"]}
   - {role: certificates, tags: ["certificates"]}
