--- a/k8s-installation/vagrant-ansible/ansible/playbooks/master.yml
+++ b/k8s-installation/vagrant-ansible/ansible/playbooks/master.yml
@@ -1,11 +1,35 @@
-- import_playbook: 00-prerequisites.yml
-- import_playbook: 01-certificates.yml
-- import_playbook: 02-etcd-cluster.yml
-- import_playbook: 03-control-plane.yml
-- import_playbook: 04-container-runtime.yml
-- import_playbook: 05-cni.yml
-- import_playbook: 06-kubelet.yml
-- import_playbook: 07-kube-proxy.yml
-- import_playbook: 08-bootstrap.yml
-- import_playbook: 09-networking.yml
-- import_playbook: 10-hardening.yml
+- name: Setup jumpbox with binaries
+  import_playbook: jumpbox_setup.yml
+
+- name: Setup prerequisites
+  import_playbook: 00-prerequisites.yml
+
+- name: Generate and distribute certificates
+  import_playbook: 01-certificates.yml
+
+- name: Setup etcd cluster
+  import_playbook: 02-etcd-cluster.yml
+
+- name: Setup control plane
+  import_playbook: 03-control-plane.yml
+
+- name: Setup container runtime
+  import_playbook: 04-container-runtime.yml
+
+- name: Setup CNI
+  import_playbook: 05-cni.yml
+
+- name: Setup kubelet
+  import_playbook: 06-kubelet.yml
+
+- name: Setup kube-proxy
+  import_playbook: 07-kube-proxy.yml
+
+- name: Bootstrap cluster
+  import_playbook: 08-bootstrap.yml
+
+- name: Setup networking
+  import_playbook: 09-networking.yml
+
+- name: Harden cluster
+  import_playbook: 10-hardening.yml
