--- a/k8s-installation/vagrant-ansible/ansible/roles/common/tasks/configure_firewall.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/common/tasks/configure_firewall.yml
@@ -6,9 +6,9 @@
 - name: Allow necessary ports
   ansible.builtin.ufw:
     rule: allow
-    port: "{{ item }}"
+    port: "{{ item.split('/')[0] }}"
     proto: "{{ item.split('/')[1] if '/' in item else 'tcp' }}"
-  loop: "{{ common_firewall_ports }}"
+  loop: "{{ common_firewall_ports + (cni_extra_ports[cni_plugin] if cni_plugin in cni_extra_ports else []) }}"
 
 - name: Enable ufw
   ansible.builtin.ufw:
