--- a/k8s-installation/vagrant-ansible/ansible/roles/common/tasks/main.yml
+++ b/k8s-installation/vagrant-ansible/ansible/roles/common/tasks/main.yml
@@ -1,12 +1,8 @@
-- name: Deploy SSH public key
-  ansible.builtin.authorized_key:
-    user: "{{ ansible_user }}"
-    state: present
-    key: "{{ lookup('file', ssh_public_key_path) }}"
-  when: ssh_public_key_path is defined
-
 - name: Setup system prerequisites
   include_tasks: setup_prerequisites.yml
 
 - name: Configure firewall
   include_tasks: configure_firewall.yml
+
+- name: Configure SSH keys
+  include_tasks: ssh_keys.yml
